feat: Cria o formulário do participante

--- a/quickInsc/core/templates/index.html
+++ b/quickInsc/core/templates/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Seja Bem-Vindo ao QuickInsc.</h1>
-    <a href="./subscription">Realizar Inscrição</a>
+    <a href="./subscriptions">Realizar Inscrição</a>
 </body>
 </html>
