--- a/quickInsc/subscriptions/static/subscriptions/css/subscriptions.css
+++ b/quickInsc/subscriptions/static/subscriptions/css/subscriptions.css
@@ -9,6 +9,10 @@ body {
     height: 100vh;
 }
 
+.banner {
+    margin: 16px;
+}
+
 form {
     background-color: #fff;
     padding: 20px;
@@ -44,14 +48,10 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 25px;
 }
 
 button:hover {
     background-color: #0056b3;
 }
 
-small {
-    display: block;
-    margin-top: 4px;
-    color: #888;
-}
