--- a/quickInsc/subscriptions/templates/subscriptions_person.html
+++ b/quickInsc/subscriptions/templates/subscriptions_person.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,23 +13,6 @@
     {% csrf_token %}
 
     {{ form }}
-    <!-- <label for="nome">Nome:</label>
-    <input type="text" id="nome" name="nome">
-
-    <label for="idade">Idade:</label>
-    <input type="text" id="idade" name="idade">
-
-    <label for="cpf">CPF:</label>
-    <input type="text" id="cpf" name="cpf">
-
-    <label for="nome">Sexo:</label>
-    <input type="text" id="nome" name="nome">
-
-    <label for="idade">Email:</label>
-    <input type="email" id="idade" name="idade">
-
-    <label for="cpf">Telefone:</label>
-    <input type="text" id="cpf" name="cpf"> -->
 
     <button type="submit">Inscrever-se</button>
 
